@@ -6,6 +6,9 @@
 \alias{isoforms,CuffGeneSet-method}
 \alias{TSS,CuffGeneSet-method}
 \alias{CDS,CuffGeneSet-method}
+\alias{promoters,CuffGeneSet-method}
+\alias{relCDS,CuffGeneSet-method}
+\alias{splicing,CuffGeneSet-method}
 
 \title{Class "CuffGeneSet"}
 \description{
@@ -21,6 +24,9 @@ Objects can be created by calls of the form \code{new("CuffGeneSet", annotation,
     \item{\code{isoforms}:}{Object of class \code{"CuffFeatureSet"} ~~ }
     \item{\code{TSS}:}{Object of class \code{"CuffFeatureSet"} ~~ }
     \item{\code{CDS}:}{Object of class \code{"CuffFeatureSet"} ~~ }
+    \item{\code{promoters}:}{Object of class \code{"CuffFeatureSet"} ~~ }
+    \item{\code{relCDS}:}{Object of class \code{"CuffFeatureSet"} ~~ }
+    \item{\code{splicing}:}{Object of class \code{"CuffFeatureSet"} ~~ }
     \item{\code{annotation}:}{Object of class \code{"data.frame"} ~~ }
     \item{\code{fpkm}:}{Object of class \code{"data.frame"} ~~ }
     \item{\code{diff}:}{Object of class \code{"data.frame"} ~~ }
@@ -39,6 +45,9 @@ No methods defined with class "CuffGeneSet" in the signature.
 		\item{isoforms}{\code{signature(object = "CuffGeneSet")}: Access @isoforms slot }
 		\item{TSS}{\code{signature(object = "CuffGeneSet")}: Access @TSS slot }
 		\item{CDS}{\code{signature(object = "CuffGeneSet")}: Access @CDS slot }
+		\item{promoters}{\code{signature(object = "CuffGeneSet")}: Access @promoters slot }
+		\item{relCDS}{\code{signature(object = "CuffGeneSet")}: Access @relCDS slot }
+		\item{splicing}{\code{signature(object = "CuffGeneSet")}: Access @splicing slot }
 	}
 }
 
