@@ -10,7 +10,7 @@ Returns a ggplot2 plot object with geom_line layer plotting FPKM values over con
 This does not return any of the clustering information directly, but if you want it, you can retrieve it from the ggplot object returned.
 }
 \usage{
-\S4method{csCluster}{CuffFeatureSet}(object,k,iter.max=100,...)
+\S4method{csCluster}{CuffFeatureSet}(object,k,pseudocount=1,...)
 }
 \arguments{
   \item{object}{
@@ -19,11 +19,11 @@ An object of class CuffFeatureSet.
   \item{k}{
 Number of pre-defined clusters to attempt to find.
 }
-  \item{iter.max}{
-Max iterations
+  \item{pseudocount}{
+Value added to FPKM to avoid log-transform issues.
 }
   \item{\dots}{
-Additional arguments
+Additional arguments to pam.
 }
 }
 \details{
